chore(waybar, tauon, starship): updates & tweaks

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,8 +1,8 @@
 {
     "layer": "top",
-    "margin-top": 5,
-    "margin-left": 5,
-    "margin-right": 5,
+    /* "margin-top": 10, */
+    /* "margin-left": 10, */
+    /* "margin-right": 10, */
     "spacing": 30,
 
     "modules-left": [
