--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -6,7 +6,7 @@
 [audio]
 seek-interval = 15              # In s. Interval to seek when using keyboard shortcut. Default is 15.
 cross-fade-time = 700           # In ms. Min: 200, Max: 2000, Default: 700. Applies to track change crossfades. End of track is always gapless.
-avoid_resampling = false        # Only implemented for FLAC, MP3, OGG, OPUS
+avoid_resampling = true         # Only implemented for FLAC, MP3, OGG, OPUS
 resample-quality = 1            # 0=best, 1=medium, 2=fast, 3=fastest. Default: 1. (applies on restart)
 cache-limit = 2000              # Limit size of network audio file cache. In MB.
 cache-use-tmp = true            # Use /tmp for cache. When enabled, above setting overridden to a small value. (applies on restart)
@@ -27,9 +27,11 @@ tag-editor-target = "picard"    # The name of the binary to call.
 [playback]
 playback-follow-cursor = false  # When advancing, always play the track that is selected.
 spotify-prefer-web = false      # Launch the web client rather than attempting to launch the desktop client.
+spotify-allow-local = false     # Play Spotify audio through Tauon.
 back-restarts = false           # Pressing the back button restarts playing track on first press.
 end-queue-stop = false          # Queue will always enable auto-stop on last track
 block-suspend = false           # Prevent system suspend during playback
+allow-video-formats = true      # Allow the import of MP4 and WEBM formats
 
 [HiDPI]
 ui-scale = 1.15                 # UI scale factor. Default is 1.0, try increase if using a HiDPI display.
@@ -96,7 +98,7 @@ add_download_directory = ""     # Add another folder to monitor in addition to h
 
 [app]
 enable-remote-interface = false  # For use with Tauon Music Remote for Android
-use-gamepad = true              # Use game controller for UI control
+use-gamepad = true              # Use game controller for UI control, restart on change.
 use-system-tray = false
 hide-maximize-button = false
 restore-window-position = true  # Save and restore the last window position on desktop on open
