chore!(nvim): Massive numbers of teensy changes

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,6 +4,7 @@ italic_font      Iosevka
 bold_italic_font Iosevka
 
 symbol_map U+F890 Font Awesome 6 Pro
+symbol_map U+f101-U+f25c nonicons
 
 font_size 12.5
 
