feat!(hyprland): update, add swayosd, refactor keybinds

--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -76,7 +76,8 @@ gestures {
 }
 
 misc {
-     no_vfr = false
+     vfr = true
+     vrr = 1
      mouse_move_enables_dpms = false
      enable_swallow = true
      swallow_regex = ^(kitty)$
