--- a/.config/hypr/hyprland/specialKeys.conf
+++ b/.config/hypr/hyprland/specialKeys.conf
@@ -1,9 +1,17 @@
-bindle = ,XF86AudioRaiseVolume,exec,pamixer -ui 5 && pamixer --get-volume > $WOBSOCK
-bindle = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
-bindle = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
+# bindle = ,XF86AudioRaiseVolume,exec,pamixer -ui 5 && pamixer --get-volume > $WOBSOCK
+# bindle = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
+# bindle = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
+bindle = ,XF86AudioRaiseVolume,exec,swayosd --output-volume=raise
+bindle = ,XF86AudioLowerVolume,exec,swayosd --output-volume=lower
+bindle = ,XF86AudioMute,exec,swayosd --output-volume=mute-toggle
+bindle = ALT,XF86AudioRaiseVolume,exec,swayosd --input-volume=raise
+bindle = ALT,XF86AudioLowerVolume,exec,swayosd --input-volume=lower
+bindle = ALT,XF86AudioMute,exec,swayosd --input-volume=mute-toggle
+
 bindle = ,XF86AudioPlay,exec,playerctl play-pause
 bindle = ,XF86AudioNext,exec,playerctl next
 bindle = ,XF86AudioPrev,exec,playerctl previous
+
 bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 
@@ -11,3 +19,4 @@ bind = ,PRINT,exec,grimshot --notify copy output
 bind = SUPER,PRINT,exec,grimshot --notify save output
 bind = SHIFT,PRINT,exec,grimshot --notify copy area
 bind = SUPERSHIFT,PRINT,exec,grimshot --notify save area
+
