--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -19,12 +19,11 @@ bind = SUPER,PERIOD,exec,$games
 # bind = SUPERSHIFT,Q,exec,$modules/powermenu.sh
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
-bind = SUPER, C, exec, hyprpicker -a -n
-bind = SUPER, SLASH, exec, bluetoothctl disconnect A3:40:01:F9:EA:34; sleep 3; bluetoothctl connect A3:40:01:F9:EA:34
+bind = SUPERSHIFT, P, exec, hyprpicker -a -n
 
-bind = SUPER,U,exec,eww open bar --toggle
-bind = SUPER,Y,exec,eww open workspace --toggle
-bind = SUPER,I,exec,eww open date --toggle
-bind = SUPER,O,exec,eww open music --toggle
-bind = SUPERALT,P,exec,eww close-all
+bind = SUPER,B,exec,eww open bar --toggle
+bind = SUPER,W,exec,eww open workspace --toggle
+bind = SUPER,C,exec,eww open date --toggle
+bind = SUPER,M,exec,eww open music --toggle
+bind = SUPERALT,Q,exec,eww close-all
 bind = SUPERSHIFT,Q,exec,eww open powermenu --toggle
