--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -13,3 +13,4 @@ exec-once = kdeconnect-indicator
 exec-once = wob
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = hyprpaper
+exec-once = swayosd
