--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,8 +3,7 @@ bold_font        Iosevka
 italic_font      Iosevka 
 bold_italic_font Iosevka
 
-symbol_map U+F890 Font Awesome 6 Pro
-symbol_map U+f101-U+f25c nonicons
+symbol_map U+F890, U+E5C2, U+f5ff, U+f0fe, U+f146 Font Awesome 6 Pro
 
 font_size 12.5
 
