chore(hyprland): theme changes, lock screen wall

--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -35,8 +35,8 @@ decoration {
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
     blur_new_optimizations = true
-    active_opacity = 0.95
-    inactive_opacity = 0.95
+    # active_opacity = 0.95
+    # inactive_opacity = 0.95
 }
 
 animations {
@@ -80,7 +80,7 @@ misc {
      vrr = 1
      mouse_move_enables_dpms = false
      enable_swallow = true
-     swallow_regex = ^(kitty)$
+     # swallow_regex = ^(kitty)$
 }
 
 binds {
