chore(tauon): config change on update

--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -102,6 +102,7 @@ use-gamepad = true              # Use game controller for UI control, restart on
 use-system-tray = false
 hide-maximize-button = false
 restore-window-position = true  # Save and restore the last window position on desktop on open
+mini-mode-always-on-top = true
 enable-mpris = true
 resume-playback-on-restart = false
 resume-playback-on-wake = false
@@ -110,7 +111,7 @@ fanart.tv-cover = true
 fanart.tv-artist = true
 fanart.tv-background = false
 auto-update-playlists = true    # Automatically update generator playlists
-write-ratings-to-tag = false    # This writes FMPS_Rating tag to files. Only MP3 and FLAC supported. FLAC requires flac package installed on host system. 
+write-ratings-to-tag = false    # This writes FMPS_Rating tags on disk. Only writing to MP3, OGG and FLAC files is currently supported.
 enable-spotify = false          # Enable Spotify specific features
 enable-discord-rpc = false      # Show track info in running Discord application
 auto-search-lyrics = false      # Automatically search internet for lyrics when display is wanted
@@ -153,8 +154,8 @@ jelly-server-url = "http://localhost:8096"  # The IP:Port where the jellyfin ser
 [network]
 stream-bitrate = 0              # Optional bitrate koel/subsonic should transcode to (Server may need to be configured for this). Set to 0 to disable transcoding.
 
-[broadcasting]
-broadcast-page-port = 7590      # Make sure to stop server first or restart app after changing this.
+[listenalong]
+broadcast-page-port = 7590      # Change applies on app restart or setting re-enable
 
 [chart]
 chart-columns = 3
