chore(hyprland)!: grimshot, walls, fakefullscreen, silent workspace

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -7,5 +7,8 @@
 # preload = ~/Pictures/Wallpapers/mo-qAZEuKcGEiI-unsplash.jpg
 # preload = ~/Pictures/Wallpapers/fly-d-0qvQQDtB1WA-unsplash.jpg
 # preload = ~/Pictures/Wallpapers/anime_background_lo_fi_by_ai_niji_dfogb87.png
-preload = ~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
-wallpaper = eDP-1,~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
+
+# preload = ~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
+# wallpaper = eDP-1,~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
+preload = ~/Pictures/Wallpapers/wallhaven-96vmgk.png
+wallpaper = eDP-1,~/Pictures/Wallpapers/wallhaven-96vmgk.png
