--- a/.config/hypr/hyprland/windowBinds.conf
+++ b/.config/hypr/hyprland/windowBinds.conf
@@ -2,6 +2,7 @@ bind = SUPER,Q,killactive,
 bind = CTRLALT,ESCAPE,exit,
 bind = SUPER,SPACE,togglefloating,
 bind = SUPER,F,fullscreen,1
+bind = SUPERALT,F,fakefullscreen
 bind = SUPER,P,pseudo,
 bind = SUPER,EQUAL,pin
 bind = ALT,TAB,cyclenext,
@@ -45,3 +46,14 @@ bind = ALT,8,movetoworkspace,8
 bind = ALT,9,movetoworkspace,9
 bind = ALT,0,movetoworkspace,10
 bind = ALT,GRAVE,movetoworkspace,special
+
+bind = ALTSHIFT,1,movetoworkspacesilent,1
+bind = ALTSHIFT,2,movetoworkspacesilent,2
+bind = ALTSHIFT,3,movetoworkspacesilent,3
+bind = ALTSHIFT,4,movetoworkspacesilent,4
+bind = ALTSHIFT,5,movetoworkspacesilent,5
+bind = ALTSHIFT,6,movetoworkspacesilent,6
+bind = ALTSHIFT,7,movetoworkspacesilent,7
+bind = ALTSHIFT,8,movetoworkspacesilent,8
+bind = ALTSHIFT,9,movetoworkspacesilent,9
+bind = ALTSHIFT,0,movetoworkspacesilent,10
