--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -4,6 +4,7 @@
     /* "margin-left": 10, */
     /* "margin-right": 10, */
     "spacing": 30,
+    "height": 42,
 
     "modules-left": [
         "cpu",
