chore(alacritty, eww, waybar)

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -10,5 +10,5 @@
 
 # preload = ~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
 # wallpaper = eDP-1,~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
-preload = ~/Pictures/Wallpapers/wallhaven-96vmgk.png
-wallpaper = eDP-1,~/Pictures/Wallpapers/wallhaven-96vmgk.png
+preload = ~/Pictures/Wallpapers/bridge_pjoavegur_michelle_spollen.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/bridge_pjoavegur_michelle_spollen.jpg
