--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -6,6 +6,7 @@
 [audio]
 seek-interval = 15              # In s. Interval to seek when using keyboard shortcut. Default is 15.
 cross-fade-time = 700           # In ms. Min: 200, Max: 2000, Default: 700. Applies to track change crossfades. End of track is always gapless.
+device-buffer-ms = 80           # Default: 80
 avoid_resampling = true         # Only implemented for FLAC, MP3, OGG, OPUS
 resample-quality = 1            # 0=best, 1=medium, 2=fast, 3=fastest. Default: 1. (applies on restart)
 cache-limit = 2000              # Limit size of network audio file cache. In MB.
