--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -26,16 +26,16 @@ window:
   # Specified in number of pixels.
   # If the position is not set, the window manager will handle the placement.
   #position:
-   #x: 0
-   #y: 0
+  #x: 0
+  #y: 0
 
   # Window padding (changes require restart)
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-   x: 10
-   y: 0
+    x: 10
+    y: 0
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
@@ -76,7 +76,7 @@ window:
   #
   # Override the variant of the GTK theme. Commonly supported values are `dark` and `light`.
   # Set this to `None` to use the default theme variant.
-  decorations_theme_variant: dark
+  decorations_theme_variant: Dark
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -89,7 +89,7 @@ scrolling:
 # Font configuration
 font:
   # Normal (roman) font face
-  size: 12
+  size: 12.5
   normal:
     # Font family
     #
@@ -108,7 +108,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specfied for the normal font.
-    family: Iosevka Term
+    family: Iosevka
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -119,7 +119,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term
+    family: Iosevka
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -130,12 +130,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Iosevka Term 
+    family:
+      Iosevka
 
       # The `style` can be specified to pick a specific face.
     #style: Bold Italic
 
-  # Point size
+    # Point size
     size: 13
 
   # Offset is the extra space around each character. `offset.y` can be thought of
@@ -162,89 +163,89 @@ draw_bold_text_with_bright_colors: true
 
 # Colors (Tomorrow Night)
 #colors:
-  # Default colors
-  #primary:
-  #  background: '#1d1f21'
-  #  foreground: '#c5c8c6'
+# Default colors
+#primary:
+#  background: '#1d1f21'
+#  foreground: '#c5c8c6'
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
+# Bright and dim foreground colors
+#
+# The dimmed foreground color is calculated automatically if it is not present.
+# If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+# is `false`, the normal foreground color will be used.
+#dim_foreground: '#828482'
+#bright_foreground: '#eaeaea'
 
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are
-  # unset, the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '#000000'
-  #  cursor: '#ffffff'
+# Cursor colors
+#
+# Colors which should be used to draw the terminal cursor. If these are
+# unset, the cursor color will be the inverse of the cell color.
+#cursor:
+#  text: '#000000'
+#  cursor: '#ffffff'
 
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active. If these are unset, the
-  # cursor color will be the inverse of the cell color.
-  #vi_mode_cursor:
-  #  text: '#000000'
-  #  cursor: '#ffffff'
+# Vi mode cursor colors
+#
+# Colors for the cursor when the vi mode is active. If these are unset, the
+# cursor color will be the inverse of the cell color.
+#vi_mode_cursor:
+#  text: '#000000'
+#  cursor: '#ffffff'
 
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
-  #selection:
-  #  text: '#eaeaea'
-  #  background: '#404040'
+# Selection colors
+#
+# Colors which should be used to draw the selection area. If selection
+# background is unset, selection color will be the inverse of the cell colors.
+# If only text is unset the cell text color will remain the same.
+#selection:
+#  text: '#eaeaea'
+#  background: '#404040'
 
-  # Normal colors
-  #normal:
-  #  black:   '#1d1f21'
-  #  red:     '#cc6666'
-  #  green:   '#b5bd68'
-  #  yellow:  '#f0c674'
-  #  blue:    '#81a2be'
-  #  magenta: '#b294bb'
-  #  cyan:    '#8abeb7'
-  #  white:   '#c5c8c6'
+# Normal colors
+#normal:
+#  black:   '#1d1f21'
+#  red:     '#cc6666'
+#  green:   '#b5bd68'
+#  yellow:  '#f0c674'
+#  blue:    '#81a2be'
+#  magenta: '#b294bb'
+#  cyan:    '#8abeb7'
+#  white:   '#c5c8c6'
 
-  # Bright colors
-  #bright:
-  #  black:   '#666666'
-  #  red:     '#d54e53'
-  #  green:   '#b9ca4a'
-  #  yellow:  '#e7c547'
-  #  blue:    '#7aa6da'
-  #  magenta: '#c397d8'
-  #  cyan:    '#70c0b1'
-  #  white:   '#eaeaea'
+# Bright colors
+#bright:
+#  black:   '#666666'
+#  red:     '#d54e53'
+#  green:   '#b9ca4a'
+#  yellow:  '#e7c547'
+#  blue:    '#7aa6da'
+#  magenta: '#c397d8'
+#  cyan:    '#70c0b1'
+#  white:   '#eaeaea'
 
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
+# Dim colors
+#
+# If the dim colors are not set, they will be calculated automatically based
+# on the `normal` colors.
+#dim:
+#  black:   '#131415'
+#  red:     '#864343'
+#  green:   '#777c44'
+#  yellow:  '#9e824c'
+#  blue:    '#556a7d'
+#  magenta: '#75617b'
+#  cyan:    '#5b7d78'
+#  white:   '#828482'
 
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
+# Indexed Colors
+#
+# The indexed colors include all colors from 16 to 256.
+# When these are not set, they're filled with sensible defaults.
+#
+# Example:
+#   `- { index: 16, color: '#ff00ff' }`
+#
+#indexed_colors: []
 
 # Visual Bell
 #
@@ -279,9 +280,9 @@ draw_bold_text_with_bright_colors: true
 window.opacity: 0.2
 
 #selection:
-  #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
+#semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
 
-  # When set to `true`, selected text will be copied to the primary clipboard.
+# When set to `true`, selected text will be copied to the primary clipboard.
 save_to_clipboard: true
 
 # Allow terminal applications to change Alacritty's window title.
@@ -361,26 +362,26 @@ mouse:
   hide_when_typing: true
 
   #url:
-    # URL launcher
-    #
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # When set to `launcher: None`, URL launching will be disabled completely.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux/BSD) xdg-open
-    #   - (Windows) explorer
-    #launcher:
-    #  program: xdg-open
-    #  args: []
+  # URL launcher
+  #
+  # This program is executed when clicking on a text which is recognized as a URL.
+  # The URL is always added to the command as the last parameter.
+  #
+  # When set to `launcher: None`, URL launching will be disabled completely.
+  #
+  # Default:
+  #   - (macOS) open
+  #   - (Linux/BSD) xdg-open
+  #   - (Windows) explorer
+  #launcher:
+  #  program: xdg-open
+  #  args: []
 
-    # URL modifiers
-    #
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    #modifiers: None
+  # URL modifiers
+  #
+  # These are the modifiers that need to be held down for opening URLs when clicking
+  # on them. The available modifiers are documented in the key binding section.
+  #modifiers: None
 
 # Mouse bindings
 #
@@ -542,94 +543,93 @@ mouse:
 # If the same trigger is assigned to multiple actions, all of them are executed
 # at once.
 key_bindings:
-    # (Windows, Linux, and BSD only)
-  - { key: V,        mods: Control|Shift, action: Paste            }
-  - { key: C,        mods: Control|Shift, action: Copy             }
-  - { key: Insert,   mods: Shift,         action: PasteSelection   }
-  - { key: Key0,     mods: Control,       action: ResetFontSize    }
-  - { key: Equals,   mods: Control,       action: IncreaseFontSize }
-  - { key: Plus,     mods: Control,       action: IncreaseFontSize }
-  - { key: Minus,    mods: Control,       action: DecreaseFontSize }
-  - { key: Minus,    mods: Control,       action: DecreaseFontSize }
-
+  # (Windows, Linux, and BSD only)
+  - { key: V, mods: Control|Shift, action: Paste }
+  - { key: C, mods: Control|Shift, action: Copy }
+  - { key: Insert, mods: Shift, action: PasteSelection }
+  - { key: Key0, mods: Control, action: ResetFontSize }
+  - { key: Equals, mods: Control, action: IncreaseFontSize }
+  - { key: Plus, mods: Control, action: IncreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
 
 #debug:
-  # Display the time it takes to redraw each frame.
-  #render_timer: false
+# Display the time it takes to redraw each frame.
+#render_timer: false
 
-  # Keep the log file after quitting Alacritty.
-  #persistent_logging: false
+# Keep the log file after quitting Alacritty.
+#persistent_logging: false
 
-  # Log level
-  #
-  # Values for `log_level`:
-  #   - None
-  #   - Error
-  #   - Warn
-  #   - Info
-  #   - Debug
-  #   - Trace
-  #log_level: Warn
+# Log level
+#
+# Values for `log_level`:
+#   - None
+#   - Error
+#   - Warn
+#   - Info
+#   - Debug
+#   - Trace
+#log_level: Warn
 
-  # Print all received window events.
-  #print_events: false
+# Print all received window events.
+#print_events: false
 
 #(garuda colors)
 #colors:
-  #primary:
-    #background: '0x0a1124'
-    #foreground: '0xedc29a'
-  #cursor:
-    #text:       '0x0a1124'
-    #cursor:     '0xedc29a'
-  #normal:
-    #black:      '0x0a1124'
-    #red:        '0x63504E'
-    #green:      '0xA33A4E'
-    #yellow:     '0xEB3247'
-    #blue:       '0xF35743'
-    #magenta:    '0xF6A73B'
-    #cyan:       '0xFAD42E'
-    #white:      '0xedc29a'
-  #bright:
-    #black:      '0xa5876b'
-    #red:        '0x63504E'
-    #green:      '0xA33A4E'
-    #yellow:     '0xEB3247'
-    #blue:       '0xF35743'
-    #magenta:    '0xF6A73B'
-    #cyan:       '0xFAD42E'
-    #white:      '0xedc29a'
-    
+#primary:
+#background: '0x0a1124'
+#foreground: '0xedc29a'
+#cursor:
+#text:       '0x0a1124'
+#cursor:     '0xedc29a'
+#normal:
+#black:      '0x0a1124'
+#red:        '0x63504E'
+#green:      '0xA33A4E'
+#yellow:     '0xEB3247'
+#blue:       '0xF35743'
+#magenta:    '0xF6A73B'
+#cyan:       '0xFAD42E'
+#white:      '0xedc29a'
+#bright:
+#black:      '0xa5876b'
+#red:        '0x63504E'
+#green:      '0xA33A4E'
+#yellow:     '0xEB3247'
+#blue:       '0xF35743'
+#magenta:    '0xF6A73B'
+#cyan:       '0xFAD42E'
+#white:      '0xedc29a'
+
 #(snazzy colors)
 #colors:
-  #primary:
-    #background: '#282a36'
-    #foreground: '#eff0eb'
-  #cursor:
-    #cursor: '#97979b'
-  #selection:
-    #text:       '#282a36'
-    #background: '#feffff'
-  #normal:
-    #black:   '#282a36'
-    #red:     '#ff5c57'
-    #green:   '#5af78e'
-    #yellow:  '#f3f99d'
-    #blue:    '#57c7ff'
-    #magenta: '#ff6ac1'
-    #cyan:    '#9aedfe'
-    #white:   '#f1f1f0'
-  #bright:
-    #black:   '#686868'
-    #red:     '#ff5c57'
-    #green:   '#5af78e'
-    #yellow:  '#f3f99d'
-    #blue:    '#57c7ff'
-    #magenta: '#ff6ac1'
-    #cyan:    '#9aedfe'
-    #white:   '#eff0eb'
-    
+#primary:
+#background: '#282a36'
+#foreground: '#eff0eb'
+#cursor:
+#cursor: '#97979b'
+#selection:
+#text:       '#282a36'
+#background: '#feffff'
+#normal:
+#black:   '#282a36'
+#red:     '#ff5c57'
+#green:   '#5af78e'
+#yellow:  '#f3f99d'
+#blue:    '#57c7ff'
+#magenta: '#ff6ac1'
+#cyan:    '#9aedfe'
+#white:   '#f1f1f0'
+#bright:
+#black:   '#686868'
+#red:     '#ff5c57'
+#green:   '#5af78e'
+#yellow:  '#f3f99d'
+#blue:    '#57c7ff'
+#magenta: '#ff6ac1'
+#cyan:    '#9aedfe'
+#white:   '#eff0eb'
+
 # # Colors (Ayu Mirage)
 # colors:
 # # Default colors
@@ -661,33 +661,32 @@ key_bindings:
 
 # Colors (Ayu Dark)
 colors:
-# Default colors
- primary:
-  background: '#0B0E14'
-  foreground: '#BFBDB6'
+  # Default colors
+  primary:
+    background: "#0B0E14"
+    foreground: "#BFBDB6"
 
-# Normal colors
- normal:
-  black:   '#0B0E14'
-  red:     '#F26D78'
-  green:   '#7FD962'
-  yellow:  '#FFB454'
-  blue:    '#59C2FF'
-  magenta: '#D2A6FF'
-  cyan:    '#95E6CB'
-  white:   '#BFBDB6'
+  # Normal colors
+  normal:
+    black: "#0B0E14"
+    red: "#F26D78"
+    green: "#7FD962"
+    yellow: "#FFB454"
+    blue: "#59C2FF"
+    magenta: "#D2A6FF"
+    cyan: "#95E6CB"
+    white: "#BFBDB6"
 
-# Bright colors
- bright:
-  black:   '#565B66'
-  red:     '#F26D78'
-  green:   '#7FD962'
-  yellow:  '#FFB454'
-  blue:    '#59C2FF'
-  magenta: '#D2A6FF'
-  cyan:    '#95E6CB'
-  white:   '#BFBDB6'
-
+  # Bright colors
+  bright:
+    black: "#565B66"
+    red: "#F26D78"
+    green: "#7FD962"
+    yellow: "#FFB454"
+    blue: "#59C2FF"
+    magenta: "#D2A6FF"
+    cyan: "#95E6CB"
+    white: "#BFBDB6"
 # Colors (Catppucin)
 #colors:
 # # Default colors
