chore(nixos): I'm back

--- a/.config/hypr/hyprland/specialKeys.conf
+++ b/.config/hypr/hyprland/specialKeys.conf
@@ -15,15 +15,14 @@ bindle = ,XF86AudioPrev,exec,playerctl previous
 bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 
-# bind = ,PRINT,exec,grimshot --notify copy output
-# bind = SUPER,PRINT,exec,grimshot --notify save output
-# bind = SHIFT,PRINT,exec,grimshot --notify copy area
-# bind = SUPERSHIFT,PRINT,exec,grimshot --notify save area
+bind = ,PRINT,exec,grimshot --notify copy output
+bind = SUPER,PRINT,exec,grimshot --notify save output
+bind = SHIFT,PRINT,exec,grimshot --notify copy area
+bind = SUPERSHIFT,PRINT,exec,grimshot --notify save area
 
-# Screenshot a monitor
-bind = , PRINT, exec, hyprshot -m output --clipboard-only
-bind = SUPER, PRINT, exec, hyprshot -m output -o ~/Pictures/Screenshots
-# Screenshot a region
-bind = SHIFT, PRINT, exec, hyprshot -m region --clipboard-only
-bind = SUPERSHIFT, PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
-
+# # Screenshot a monitor
+# bind = , PRINT, exec, hyprshot -m output --clipboard-only
+# bind = SUPER, PRINT, exec, hyprshot -m output -o ~/Pictures/Screenshots
+# # Screenshot a region
+# bind = SHIFT, PRINT, exec, hyprshot -m region --clipboard-only
+# bind = SUPERSHIFT, PRINT, exec, hyprshot -m region -o ~/Pictures/Screenshots
