--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,kitty
 bind = SUPERSHIFT,return,exec,[float]kitty
-bind = SUPERSHIFT,B,exec,firefox-developer-edition
+bind = SUPERSHIFT,B,exec,firefox-devedition
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
