--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,7 +1,7 @@
 #preload = ~/Pictures/Wallpapers/beach.jpg
 # preload = ~/Pictures/Wallpapers/7sq233wo9nb81.png
 #preload = ~/Pictures/Wallpapers/wallpapersden.com_abstract-lines-hd-cool_1920x1080.jpg
-# preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
+ preload = ~/Pictures/Wallpapers/nature-azure-organism-liquid-ART-aqua-1994693-wallhere.com.jpg
 # preload = ~/Pictures/Wallpapers/img1.wallspic.com-fractal_art-purple-azure-art-violet-4500x1928.png
 #preload = ~/Pictures/Wallpapers/gradient-pattern_ayu-dark.jpg
 # preload = ~/Pictures/Wallpapers/mo-qAZEuKcGEiI-unsplash.jpg
@@ -10,5 +10,5 @@
 
 # preload = ~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
 # wallpaper = eDP-1,~/Pictures/Wallpapers/Eah4dCyVcAAgULO.jpg
-preload = ~/Pictures/Wallpapers/bridge_pjoavegur_michelle_spollen.jpg
-wallpaper = eDP-1,~/Pictures/Wallpapers/bridge_pjoavegur_michelle_spollen.jpg
+preload = ~/Pictures/Wallpapers/gmys12jp52f61.jpg
+wallpaper = eDP-1,~/Pictures/Wallpapers/gmys12jp52f61.jpg
