feat(hyprland, waybar): eye candy, minor tweaks

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -10,6 +10,9 @@ bind = SUPERSHIFT,C,exec,gnome-calculator
 bind = SUPERSHIFT,S,exec,gnome-control-center
 bind = SUPERSHIFT,V,exec,code
 bind = SUPERSHIFT,N,exec,kitty nvim
+bind = SUPERSHIFT,H,exec,kitty hx
+
+bind = ALTSHIFT,N,exec,kitty nvim ~/.nixos
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
