--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -25,3 +25,5 @@ windowrule = float,org.gnome.Calculator
 windowrule = float,title:Reminder
 windowrule = float,title:About*
 windowrule = float,class:org.kde.kdeconnect.daemon
+
+windowrule = rounding 50,swayosd
