--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -19,8 +19,8 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 0
-    col.active_border = 0x55CCCAC2
-    col.inactive_border = 0xaa95e6cb
+    col.active_border = 0x99BFBFB6
+    col.inactive_border = 0x66BFBFB6
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
     cursor_inactive_timeout = 0
@@ -28,7 +28,7 @@ general {
 
 decoration {
     rounding = 10
-    blur = true
+    blur = false
     blur_size = 3 # minimum 1
     blur_passes = 3 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
