--- a/.config/hypr/hyprland/specialKeys.conf
+++ b/.config/hypr/hyprland/specialKeys.conf
@@ -12,8 +12,11 @@ bindle = ,XF86AudioPlay,exec,playerctl play-pause
 bindle = ,XF86AudioNext,exec,playerctl next
 bindle = ,XF86AudioPrev,exec,playerctl previous
 
-bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
-bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
+# bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
+# bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
+
+bindle = ,XF86MonBrightnessUp,exec,swayosd --brightness raise
+bindle = ,XF86MonBrightnessDown,exec,swayosd --brightness lower
 
 bind = ,PRINT,exec,grimshot --notify copy output
 bind = SUPER,PRINT,exec,grimshot --notify save output
