--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -1,4 +1,4 @@
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = systemctl --user start polkit-gnome-authentication-agent-1.service
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar
@@ -11,3 +11,4 @@ exec-once = eww daemon
 exec-once = kdeconnect-indicator
 exec-once = hyprpaper
 exec-once = swayosd
+exec-once = $modules/bat.sh
