--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -28,13 +28,14 @@ general {
 
 decoration {
     rounding = 10
-    blur = false
-    blur_size = 3 # minimum 1
-    blur_passes = 3 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
-    blur_new_optimizations = true
+    blur {
+        enabled = false
+        size = 3 # minimum 1
+        passes = 3 # minimum 1, more passes = more resource intensive.
+        # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
+        # if you want heavy blur, you need to up the blur_passes.
+        # the more passes, the more you can up the blur_size without noticing artifacts.
+    }
     # active_opacity = 0.95
     # inactive_opacity = 0.95
 }
