chore(hypr): change battery notification path

--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -11,4 +11,4 @@ exec-once = eww daemon
 exec-once = kdeconnect-indicator
 exec-once = hyprpaper
 exec-once = swayosd
-exec-once = $modules/bat.sh
+exec-once = $modules/battery-notification.sh
