--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -1,4 +1,4 @@
-$modules = $HOME/.local/share/bin
+$modules = $HOME/.config/hypr/scripts
 $lock = swaylock -f -i ~/Pictures/Wallpapers/wallhaven-y8e1gl.jpg
 $vault = encfs -i 1 --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
 $vaultPersistent = encfs --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.local/share/plasma-vault/Han.enc ~/Vaults/Han/ | xargs -I% notify-send "%"
