feat(hyprland): dunst, aesthetics & cleaning

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -4,7 +4,7 @@ bind = SUPERSHIFT,B,exec,firefox-devedition
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
-bind = SUPERSHIFT,O,exec,obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind = SUPERSHIFT,O,exec,obsidian
 bind = SUPERSHIFT,Z,exec,zotero
 bind = SUPERSHIFT,C,exec,gnome-calculator
 bind = SUPERSHIFT,S,exec,gnome-control-center
@@ -12,7 +12,9 @@ bind = SUPERSHIFT,V,exec,code
 bind = SUPERSHIFT,N,exec,kitty nvim
 bind = SUPERSHIFT,H,exec,kitty hx
 
-bind = ALTSHIFT,N,exec,kitty nvim ~/.nixos
+bind = ALTSHIFT,N,exec,kitty hx ~/.nixos
+bind = ALTSHIFT,C,exec,kitty hx ~/.config
+bind = SUPERCONTROL,N,exec,[float]kitty sudo nixos-rebuild switch --flake ~/.nixos
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
@@ -22,9 +24,11 @@ bind = SUPER,PERIOD,exec,$games
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPERSHIFT, P, exec, hyprpicker -a -n
+# bindr = SUPER, SUPER_L, exec, killall anyrun || anyrun
+bind = ALT, SPACE, exec, anyrun
+bind = SUPER, N, exec, dunstctl history-pop
+bind = SUPERALT, T, exec, systemctl restart systemd-timesyncd
 
-bind = SUPER,B,exec,eww open bar --toggle
-bind = SUPER,W,exec,eww open workspace --toggle
 bind = SUPER,C,exec,eww open date --toggle
 bind = SUPER,M,exec,eww open music --toggle
 bind = SUPERALT,Q,exec,eww close-all
