--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -6,7 +6,7 @@ exec-once = swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 
 exec-once = wlsunset -S 6:00 -s 18:00 -d 2500
 exec-once = wl-paste --type text --watch clipman store --max-items=20
 exec-once = clipman restore
-exec-once = mako
+exec-once = dunst
 exec-once = eww daemon
 exec-once = kdeconnect-indicator
 exec-once = hyprpaper
