feat(hyprland): hyprland to swww, eww volume

--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -82,6 +82,7 @@ misc {
      mouse_move_enables_dpms = false
      enable_swallow = true
      # swallow_regex = ^(kitty)$
+     disable_hyprland_logo = true
 }
 
 binds {
