--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,kitty
 bind = SUPERSHIFT,return,exec,[float]kitty
-bind = SUPERSHIFT,B,exec,firefox-devedition
+bind = SUPERSHIFT,B,exec,firefox-developer-edition
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
@@ -14,7 +14,9 @@ bind = SUPERSHIFT,H,exec,kitty hx
 
 bind = ALTSHIFT,N,exec,kitty hx ~/.nixos
 bind = ALTSHIFT,C,exec,kitty hx ~/.config
+
 bind = SUPERCONTROL,N,exec,[float]kitty sudo nixos-rebuild switch --flake ~/.nixos
+bind = SUPERALT, T, exec, systemctl restart systemd-timesyncd
 
 bind = SUPER,D,exec,$launcher
 bind = SUPER,COMMA,exec,$vault
@@ -27,7 +29,6 @@ bind = SUPERSHIFT, P, exec, hyprpicker -a -n
 # bindr = SUPER, SUPER_L, exec, killall anyrun || anyrun
 bind = ALT, SPACE, exec, anyrun
 bind = SUPER, N, exec, dunstctl history-pop
-bind = SUPERALT, T, exec, systemctl restart systemd-timesyncd
 
 bind = SUPER,C,exec,eww open date --toggle
 bind = SUPER,M,exec,eww open music --toggle
