--- a/.config/hypr/hyprland/windowRules.conf
+++ b/.config/hypr/hyprland/windowRules.conf
@@ -27,3 +27,7 @@ windowrule = float,title:About*
 windowrule = float,class:org.kde.kdeconnect.daemon
 
 windowrule = rounding 50,swayosd
+windowrule = size 50% 60%,kitty
+windowrule = center,kitty
+
+# windowrulev2 = forcergbx, class:firefox-aurora
