feat(hyprland): disable hyprchan

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,8 @@ monitor = eDP-1,1920x1080@60,0x0,1,mirror,DP-2
 #monitor = ,preferred,auto,1
 
 # Blur LayerSurfaces
-blurls=waybar
-blurls=wob
-blurls=lockscreen
+# blurls=waybar
+# blurls=lockscreen
 # blurls=gtk-layer-shell
-blurls=swayosd
+# blurls=eww-blur
+
