--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -82,7 +82,8 @@ misc {
      mouse_move_enables_dpms = false
      enable_swallow = true
      # swallow_regex = ^(kitty)$
-     disable_hyprland_logo = true
+     # disable_hyprland_logo = true
+     force_default_wallpaper = 0
 }
 
 binds {
