feat: change terminal to wezterm

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
-bind = SUPER,return,exec,kitty
-bind = SUPERSHIFT,return,exec,[float]kitty
-bind = SUPERSHIFT,B,exec,firefox-developer-edition
+bind = SUPER,return,exec,wezterm
+bind = SUPERSHIFT,return,exec,[float]wezterm
+bind = SUPERSHIFT,B,exec,firefox
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
@@ -9,13 +9,12 @@ bind = SUPERSHIFT,Z,exec,zotero
 bind = SUPERSHIFT,C,exec,gnome-calculator
 bind = SUPERSHIFT,S,exec,gnome-control-center
 bind = SUPERSHIFT,V,exec,code
-bind = SUPERSHIFT,N,exec,kitty nvim
-bind = SUPERSHIFT,H,exec,kitty hx
+bind = SUPERSHIFT,H,exec,$terminal hx
 
-bind = ALTSHIFT,N,exec,kitty hx ~/.nixos
-bind = ALTSHIFT,C,exec,kitty hx ~/.config
+bind = ALTSHIFT,N,exec,$terminal hx ~/.nixos
+bind = ALTSHIFT,C,exec,$terminal hx ~/.config
 
-bind = SUPERCONTROL,N,exec,[float]kitty sudo nixos-rebuild switch --flake ~/.nixos
+bind = SUPERCONTROL,N,exec,[float]$terminal sudo nixos-rebuild switch --flake ~/.nixos
 bind = SUPERALT, T, exec, systemctl restart systemd-timesyncd
 
 bind = SUPER,D,exec,$launcher
