--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -7,4 +7,5 @@ $games = udisksctl mount --block-device /dev/nvme0n1p4
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
 $launcher = killall rofi || rofi -show drun -theme ~/.config/rofi/launcher.rasi
-$clipboard = clipman pick --tool=rofi --tool-args="-theme ~/.config/rofi/launcher.rasi"
+$clipboard = cliphist list | rofi -dmenu -theme ~/.config/rofi/launcher.rasi | cliphist decode | wl-copy
+$terminal = wezterm start --
