feat: kitty themes, starship nix, waybar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 font_family      Iosevka
 bold_font        Iosevka
-italic_font      Iosevka 
+italic_font      Iosevka
 bold_italic_font Iosevka
 
 symbol_map U+F890, U+E5C2, U+f5ff, U+f0fe, U+f146 Font Awesome 6 Pro
@@ -59,16 +59,13 @@ symbol_map U+2500-U+259F Symbols Nerd Font # Box Drawing
 # U+F167 is HTML logo, but YouTube logo in Symbols Nerd Font
 symbol_map U+F102,U+F116-U+F118,U+F12F,U+F13E,U+F1AF,U+F1BF,U+F1CF,U+F1FF,U+F20F,U+F21F-U+F220,U+F22E-U+F22F,U+F23F,U+F24F,U+F25F nonicons
 
-font_size 12.5
+font_size 12
 
 window_padding_width 0 5
 
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 #: Color scheme {{{
-
-foreground #bfbab0
-background #0f1419
 
 #: The foreground and background colors
 
@@ -96,8 +93,10 @@ background #0f1419
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-foreground #BFBFB6
-background #0B0E14
+# foreground #BFBFB6
+# background #0B0E14
+foreground #bfbab0
+background #0f1419
 
 selection_foreground #0B0E14
 selection_background #BFBFB6
@@ -110,7 +109,7 @@ selection_background #BFBFB6
 #: the 256 color table as color16 to color255.
 
 color0 #0B0E14
-color8 #566B66
+color8 #565B66
 
 #: black
 
@@ -161,3 +160,9 @@ tab_bar_style powerline
 tab_powerline_style slanted
 
 confirm_os_window_close 2
+
+# Window bindings
+map shift+down move_window up
+map shift+left move_window right
+map shift+right move_window left
+map shift+up move_window down
