--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -5,10 +5,11 @@ exec-once = waybar
 exec-once = swayidle -w timeout 300 '$screenOff' resume '$screenOn' timeout 315 '$lock' timeout 600 'systemctl suspend' after-resume '$screenOn' before-sleep '$lock'
 # exec-once = wlsunset -S 6:00 -s 18:00 -d 2500
 exec-once = gammastep -l 22.6:88.4
-exec-once = wl-paste --type text --watch clipman store --max-items=20
-exec-once = clipman restore
+exec-once = wl-paste --watch cliphist store --max-items=20
+# exec-once = clipman restore
 exec-once = dunst
 exec-once = eww daemon
-exec-once = swww init
+exec-once = sleep 1; swww init
 exec-once = swayosd
 exec-once = $modules-hypr/battery-notification.sh
+exec-once = nm-applet --indicator
