feat(ags)!: almost feels home, but better

--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,wezterm
 bind = SUPERSHIFT,return,exec,[float]wezterm
-bind = SUPERSHIFT,B,exec,firefox
+bind = SUPERSHIFT,B,exec,firefox-devedition
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
