--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -6,6 +6,7 @@ $vaultPersistent = encfs --extpass="bemenu -p 'Enter pass: ' < /dev/null" -m ~/.
 $games = udisksctl mount --block-device /dev/nvme0n1p4
 $screenOff = hyprctl dispatch dpms off
 $screenOn = hyprctl dispatch dpms on
-$launcher = killall rofi || rofi -show drun -theme ~/.config/rofi/launcher.rasi
+# $launcher = killall rofi || rofi -show drun -theme ~/.config/rofi/launcher.rasi
+$launcher = ags -t "applauncher"
 $clipboard = cliphist list | rofi -dmenu -theme ~/.config/rofi/launcher.rasi | cliphist decode | wl-copy
 $terminal = wezterm start --
