--- a/.config/hypr/hyprland/windowBinds.conf
+++ b/.config/hypr/hyprland/windowBinds.conf
@@ -6,7 +6,8 @@ bind = SUPERALT,F,fakefullscreen
 bind = SUPER,P,pseudo,
 bind = SUPER,EQUAL,pin
 bind = ALT,TAB,cyclenext,
-bind = SUPER,TAB,workspace,e+1
+# bind = SUPER,TAB,workspace,e+1
+bind = SUPER,TAB,exec, ags -t overview
 
 bind = SUPER,left,movefocus,l
 bind = SUPER,right,movefocus,r
