--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,11 +16,11 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    gaps_in = 5
-    gaps_out = 10
-    border_size = 0
-    col.active_border = 0x99BFBFB6
-    col.inactive_border = 0x66BFBFB6
+    #gaps_in = 5
+    #gaps_out = 10
+    #border_size = 0
+    #col.active_border = 0x33BFBFB6
+    #col.inactive_border = 0x11BFBFB6
 
     apply_sens_to_raw = 0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
     cursor_inactive_timeout = 0
