--- a/.config/hypr/hyprland/specialKeys.conf
+++ b/.config/hypr/hyprland/specialKeys.conf
@@ -2,16 +2,19 @@
 # bindle = ,XF86AudioLowerVolume,exec,pamixer -ud 5 && pamixer --get-volume > $WOBSOCK
 # bindle = ,XF86AudioMute,exec,pamixer --toggle-mute && ( [ "$(pamixer --get-mute)" = "true" ] && echo 0 > $WOBSOCK ) || pamixer --get-volume > $WOBSOCK
 
-bindle = ,XF86AudioRaiseVolume,exec,$modules-eww/toggle_osd.sh --up
-bindle = ,XF86AudioLowerVolume,exec,$modules-eww/toggle_osd.sh --down
-bindle = ,XF86AudioMute,exec,$modules-eww/toggle_osd.sh --toggle
+# bindle = ,XF86AudioRaiseVolume,exec,swayosd-client --output-volume=raise
+# bindle = ,XF86AudioLowerVolume,exec,swayosd-client --output-volume=lower
+# bindle = ,XF86AudioMute,exec,swayosd-client --output-volume=mute-toggle
+# bindle = ALT,XF86AudioRaiseVolume,exec,swayosd-client --input-volume=raise
+# bindle = ALT,XF86AudioLowerVolume,exec,swayosd-client --input-volume=lower
+# bindle = ALT,XF86AudioMute,exec,swayosd-client --input-volume mute-toggle
 
-# bindle = ,XF86AudioRaiseVolume,exec,swayosd --output-volume=raise
-# bindle = ,XF86AudioLowerVolume,exec,swayosd --output-volume=lower
-# bindle = ,XF86AudioMute,exec,swayosd --output-volume=mute-toggle
-bindle = ALT,XF86AudioRaiseVolume,exec,swayosd --input-volume=raise
-bindle = ALT,XF86AudioLowerVolume,exec,swayosd --input-volume=lower
-bindle = ALT,XF86AudioMute,exec,swayosd --input-volume=mute-toggle
+bindle = ,XF86AudioRaiseVolume,exec,ags -r 'audio.speaker.volume += 0.05; indicator.speaker()'
+bindle = ,XF86AudioLowerVolume,exec,ags -r 'audio.speaker.volume -= 0.05; indicator.speaker()'
+bindle = ,XF86AudioMute,exec,swayosd-client --output-volume=mute-toggle
+bindle = ALT,XF86AudioRaiseVolume,exec,swayosd-client --input-volume=raise
+bindle = ALT,XF86AudioLowerVolume,exec,swayosd-client --input-volume=lower
+bindle = ALT,XF86AudioMute,exec,swayosd-client --input-volume mute-toggle
 
 bindle = ,XF86AudioPlay,exec,playerctl play-pause
 bindle = ,XF86AudioNext,exec,playerctl next
@@ -20,8 +23,11 @@ bindle = ,XF86AudioPrev,exec,playerctl previous
 # bindle = ,XF86MonBrightnessUp,exec,light -S "$(light -G | awk '{ print int(($1 + .72) * 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 # bindle = ,XF86MonBrightnessDown,exec,light -S "$(light -G | awk '{ print int($1 / 1.4) }')" && light -G | cut -d'.' -f1 > $WOBSOCK
 
-bindle = ,XF86MonBrightnessUp,exec,swayosd --brightness raise
-bindle = ,XF86MonBrightnessDown,exec,swayosd --brightness lower
+# bindle = ,XF86MonBrightnessUp,exec,swayosd-client --brightness raise
+# bindle = ,XF86MonBrightnessDown,exec,swayosd-client --brightness lower
+
+bindle = ,XF86MonBrightnessUp,exec,ags -r 'brightness.screen += 0.25; indicator.display()'
+bindle = ,XF86MonBrightnessDown,exec,ags -r 'brightness.screen -= 0.25; indicator.display()'
 
 bind = ,PRINT,exec,grimshot --notify copy output
 bind = SUPER,PRINT,exec,grimshot --notify save output
