--- a/.config/hypr/hyprland/userBinds.conf
+++ b/.config/hypr/hyprland/userBinds.conf
@@ -1,6 +1,6 @@
 bind = SUPER,return,exec,wezterm
 bind = SUPERSHIFT,return,exec,[float]wezterm
-bind = SUPERSHIFT,B,exec,firefox-devedition
+bind = SUPERSHIFT,B,exec,brave
 bind = SUPERSHIFT,E,exec,emacs
 bind = SUPERSHIFT,M,exec,tauon
 bind = SUPERSHIFT,F,exec,nautilus
@@ -25,8 +25,6 @@ bind = SUPER,PERIOD,exec,$games
 bind = ALT,V,exec,$clipboard
 bind = CTRLALT,L,exec,$lock
 bind = SUPERSHIFT, P, exec, hyprpicker -a -n
-# bindr = SUPER, SUPER_L, exec, killall anyrun || anyrun
-bind = ALT, SPACE, exec, anyrun
 bind = SUPER, N, exec, dunstctl history-pop
 
 bind = SUPER,C,exec,eww open date --toggle
