--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -35,8 +35,8 @@ block-suspend = false           # Prevent system suspend during playback
 allow-video-formats = true      # Allow the import of MP4 and WEBM formats
 
 [HiDPI]
-ui-scale = 1.15                 # UI scale factor. Default is 1.0, try increase if using a HiDPI display.
-auto-scale = false              # Automatically choose above setting
+ui-scale = 1.0                  # UI scale factor. Default is 1.0, try increase if using a HiDPI display.
+auto-scale = true               # Automatically choose above setting
 tracklist-y-text-offset = 0     # If you're using a UI scale, you may need to tweak this.
 
 [ui]
@@ -76,9 +76,11 @@ gallery-center-text = false
 [fonts]
 # Changes will require app restart.
 use-custom-fonts = true         # Setting to false will reset below settings to default on restart
-font-main-standard = "IBM Plex Sans, Noto Sans"  # Sugested alternate: Liberation Sans
+font-main-standard = "IBM Plex Sans, Noto Sans"  # Suggested alternate: Liberation Sans
 font-main-medium = "IBM Plex Sans, Noto Sans, Medium"
 font-main-bold = "IBM Plex Sans, Noto Sans, Bold"
+font-main-condensed = "Noto Sans, Extra-Condensed"
+font-main-condensed-bold = "Noto Sans, Extra-Condensed Bold"
 
 [tracklist]
 double-digit-indices = false
@@ -117,6 +119,7 @@ enable-spotify = false          # Enable Spotify specific features
 enable-discord-rpc = false      # Show track info in running Discord application
 auto-search-lyrics = false      # Automatically search internet for lyrics when display is wanted
 shortcuts-ignore-keymap = false  # When enabled, shortcuts will map to the physical keyboard layout
+alpha_key_activate_search = true  # When enabled, pressing single letter keyboard key will activate the global search
 
 [tokens]
 discogs-personal-access-token = "ATXUaZhOSCbZEpKhfscrlCOpUtUHncTmoKyrOYTj"  # Used for sourcing of artist thumbnails.
