--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -16,9 +16,9 @@ input {
 general {
     sensitivity = 1.0 # for mouse cursor
 
-    #gaps_in = 5
-    #gaps_out = 10
-    #border_size = 0
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 0
     #col.active_border = 0x33BFBFB6
     #col.inactive_border = 0x11BFBFB6
 
