feat(nixos): added helix-gpt, android studio

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -18,7 +18,7 @@ normal = "block"
 select = "underline"
 
 [editor.file-picker]
-hidden = false
+# hidden = false
 
 [editor.indent-guides]
 render = true
