--- a/.local/share/TauonMusicBox/tauon.conf
+++ b/.local/share/TauonMusicBox/tauon.conf
@@ -102,7 +102,7 @@ add_download_directory = ""     # Add another folder to monitor in addition to h
 [app]
 enable-remote-interface = false  # For use with Tauon Music Remote for Android
 use-gamepad = true              # Use game controller for UI control, restart on change.
-use-system-tray = false
+use-system-tray = true
 hide-maximize-button = false
 restore-window-position = true  # Save and restore the last window position on desktop on open
 mini-mode-always-on-top = true
