--- a/.config/hypr/hyprland/main.conf
+++ b/.config/hypr/hyprland/main.conf
@@ -81,7 +81,7 @@ misc {
      vrr = 1
      mouse_move_enables_dpms = false
      enable_swallow = true
-     # swallow_regex = ^(kitty)$
+     # swallow_regex = ^(wezterm)$
      # disable_hyprland_logo = true
      force_default_wallpaper = 0
 }
